# transparent-aliases

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/abi/: CMakeLists.txt
examples/abi/app/source/: app.c
examples/abi/my_libc/include/my_libc/: defs.h  maxabs.h
examples/abi/my_libc/source/: maxabs.c  maxabs.new.c
examples/abi/new/: CMakeLists.txt
examples/abi/old/: CMakeLists.txt
examples/discard_warning/: CMakeLists.txt
examples/discard_warning/include/: call.h
examples/discard_warning/source/: discard_warning.c
examples/stdc/: CMakeLists.txt
examples/stdc/source/: example1.c  example2.c  example3.c  example4.c
